; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_menuet.c_check_buffer.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_menuet.c_check_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"MENUET0\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"Unsupported MENUET version header\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca [8 x i32], align 16
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = getelementptr inbounds [8 x i32], [8 x i32]* %4, i64 0, i64 0
  %7 = call i32 @r_buf_read_at(i32* %5, i32 0, i32* %6, i32 32)
  %8 = sext i32 %7 to i64
  %9 = icmp ne i64 %8, 32
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @r_buf_size(i32* %12)
  %14 = icmp sge i32 %13, 32
  br i1 %14, label %15, label %25

15:                                               ; preds = %11
  %16 = getelementptr inbounds [8 x i32], [8 x i32]* %4, i64 0, i64 0
  %17 = call i32 @memcmp(i32* %16, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 7)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %25, label %19

19:                                               ; preds = %15
  %20 = getelementptr inbounds [8 x i32], [8 x i32]* %4, i64 0, i64 7
  %21 = load i32, i32* %20, align 4
  switch i32 %21, label %23 [
    i32 48, label %22
    i32 49, label %22
    i32 50, label %22
  ]

22:                                               ; preds = %19, %19, %19
  store i32 1, i32* %2, align 4
  br label %26

23:                                               ; preds = %19
  %24 = call i32 @eprintf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  br label %25

25:                                               ; preds = %23, %15, %11
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %25, %22, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @r_buf_read_at(i32*, i32, i32*, i32) #1

declare dso_local i32 @r_buf_size(i32*) #1

declare dso_local i32 @memcmp(i32*, i8*, i32) #1

declare dso_local i32 @eprintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
